--- a/credit_risk_resampling.ipynb
+++ b/credit_risk_resampling.ipynb
@@ -1244,9 +1244,8 @@
     }
    ],
    "source": [
-    "# Print the imbalanced classification report\n",
+    "# Print the imbalanced classification report for SMOTEENN\n",
     "from imblearn.metrics import classification_report_imbalanced\n",
-    "\n",
     "print(classification_report_imbalanced(y_test, y_pred))"
    ]
   },
